[package]
name = "salus"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.51"
http = "0.2.5"
hyper = {version = "0.14.15", features = ["server", "http1", "http2", "runtime"]}

[dev-dependencies]
tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros"] }

[workspace]
members = [".", "salus-macros"]