[package]
name = "salus"
version = "0.0.1"
edition = "2021"
description = "The safest web framework"
license = "MIT"

[dependencies]
async-trait = "0.1.51"
futures = "0.3.19"
http = "0.2.5"
hyper = {version = "0.14.15", features = ["server", "http1", "http2", "runtime"]}
salus-macros = {path = "./salus-macros"}
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"

[dev-dependencies]
tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros"] }

[workspace]
members = [".", "salus-macros"]
